crates/logweir-engine-oso/tests/snapshots/render__restore_yaml_azure.snap
---
source: crates/logweir-engine-oso/tests/render.rs
expression: "render_restore::render(&p).expect(\"G-GLOB: this fixture holds no glob metacharacter\")"
---
# Rendered by logweir. Do not edit; regenerate with `logweir drill run`.
mode: restore
backup_id: "backup-2026-08-30T02:00:00Z"

target:
  bootstrap_servers:
    - "kafka-broker-1:9092"
  topics:
    include:
      - "orders"
      - "payments"

storage:
  backend: azure
  account_name: "logweirdemo"
  container_name: "kafka-backups"
  prefix: "basic-demo"

restore:
  topic_mapping:
    "orders": "drill-20260903-orders"
    "payments": "drill-20260903-payments"
  create_topics: false
  default_replication_factor: 1
  header_preflight: full
  dry_run_check_segments: true
  checkpoint_state: "/var/lib/logweir/01J9X/checkpoint.json"
  checkpoint_interval_secs: 30
  time_window_start: 1787961600000
  time_window_end: 1788055200000
  strip_offset_headers: false
  consumer_group_strategy: skip
  reset_consumer_offsets: false
  auto_consumer_groups: false
  offset_report: "/var/lib/logweir/01J9X/offsets.json"

metrics:
  enabled: false
